recursion.lessons.recursion.koch.Koch.scala.error
Koch:5: error: not found: value snowSide
snowSide(levels-1, length/3);
^Koch:8: error: not found: value snowSide
snowSide(levels-1, length/3);
^Koch:11: error: not found: value snowSide
snowSide(levels-1, length/3);
^